WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37341
REGRESSION: Web Inspector: Crash when trying to display a profile
https://bugs.webkit.org/show_bug.cgi?id=37341
Summary
REGRESSION: Web Inspector: Crash when trying to display a profile
Mikhail Naganov
Reported
2010-04-09 10:18:27 PDT
Open any page, open Inspector, enable profiling, start profiling, then stop -- WebKit crashes. The crash happens due to an attempt to calculate a hash of a null url of a call identifier.
Attachments
proposed patch
(1.04 KB, patch)
2010-04-09 10:44 PDT
,
Mikhail Naganov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Naganov
Comment 1
2010-04-09 10:44:45 PDT
Created
attachment 52969
[details]
proposed patch
WebKit Commit Bot
Comment 2
2010-04-09 13:20:46 PDT
Comment on
attachment 52969
[details]
proposed patch Clearing flags on attachment: 52969 Committed
r57354
: <
http://trac.webkit.org/changeset/57354
>
WebKit Commit Bot
Comment 3
2010-04-09 13:20:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug