2010-04-09  Mikhail Naganov  <mnaganov@chromium.org>

Reviewed by Pavel Feldman.

        Make CallIdentifier constructor to handle null urls.

        https://bugs.webkit.org/show_bug.cgi?id=37341

        * profiler/CallIdentifier.h:
        (JSC::CallIdentifier::CallIdentifier):

Canonical link: https://commits.webkit.org/48646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57354 268f45cc-cd09-0410-ab3c-d52691b4dbfc